--- a/Webbserverprogrammering_1/Lektioner/2022-02-08/third_server/package.json
+++ b/Webbserverprogrammering_1/Lektioner/2022-02-08/third_server/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "second_server",
+  "name": "third_server",
   "version": "1.0.0",
-  "description": "Node, express",
+  "description": "Third Server",
   "main": "index.js",
   "type": "module",
   "scripts": {
