--- a/Webbserverprogrammering_1/Lektioner/2022-03-01/backend/package.json
+++ b/Webbserverprogrammering_1/Lektioner/2022-03-01/backend/package.json
@@ -6,9 +6,16 @@
   "type": "module",
   "scripts": {
     "start": "npx nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha 'tests/**'"
   },
-  "keywords": [],
+  "keywords": [
+    "RestAPI",
+    "Express",
+    "Helmet",
+    "Morgan",
+    "Mocha",
+    "Chai"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -19,6 +26,9 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
+    "mocha": "^9.2.1",
     "nodemon": "^2.0.15"
   }
 }
