--- a/Webbserverprogrammering_1/assignment/backend/package.json
+++ b/Webbserverprogrammering_1/assignment/backend/package.json
@@ -5,7 +5,8 @@
   "main": "src/server.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npx nodemon server.js",
+    "test": "mocha 'tests/**'"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +17,9 @@
     "express": "^4.17.3"
   },
   "devDependencies": {
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
+    "mocha": "^9.2.1",
     "nodemon": "^2.0.15"
   }
 }
