--- a/Datalagring/Lektioner/2022-03-25/server/package.json
+++ b/Datalagring/Lektioner/2022-03-25/server/package.json
@@ -12,7 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.0",
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "helmet": "^5.0.2",
+    "mongoose": "^6.2.8",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "eslint": "^8.11.0",
