--- a/Datalagring/Lektioner/2022-03-25/server/.gitignore
+++ b/Datalagring/Lektioner/2022-03-25/server/.gitignore
@@ -154,7 +154,7 @@ ehthumbs_vista.db
 # Dump file
 *.stackdump
 
-# Folder config file
+# Folder configuration file
 [Dd]esktop.ini
 
 # Recycle Bin used on file shares
