--- a/Datalagring/Lektioner/2022-03-25/server/package.json
+++ b/Datalagring/Lektioner/2022-03-25/server/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha 'tests/**'"
   },
   "keywords": [],
   "author": "",
@@ -19,8 +19,11 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
     "eslint": "^8.11.0",
     "eslint-plugin-react": "^7.29.4",
+    "mocha": "^9.2.2",
     "nodemon": "^2.0.15"
   }
 }
