--- a/Datalagring/assignmentMongoMongoose/backend/package.json
+++ b/Datalagring/assignmentMongoMongoose/backend/package.json
@@ -5,17 +5,19 @@
   "main": "src/server.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha 'tests/**'"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "helmet": "^5.0.2",
     "mongoose": "^6.2.9",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "winston": "^3.6.0"
   },
   "devDependencies": {
     "chai": "^4.3.6",
