--- a/Fullstack/Lektioner/2022-04-21/package.json
+++ b/Fullstack/Lektioner/2022-04-21/package.json
@@ -2,7 +2,7 @@
   "name": "2022-04-21",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
     "start": "ts-node src/index.ts",
     "dev": "nodemon --exec ts-node src/index.ts",
