--- a/Fullstack/Lektioner/2022-04-26/server/package.json
+++ b/Fullstack/Lektioner/2022-04-26/server/package.json
@@ -16,9 +16,23 @@
     "express": "^4.17.3"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.1",
+    "@types/chai-http": "^4.2.0",
+    "@types/cors": "^2.8.12",
+    "@types/dotenv": "^8.2.0",
+    "@types/expect": "^24.3.0",
     "@types/express": "^4.17.13",
+    "@types/helmet": "^4.0.0",
+    "@types/mocha": "^9.1.1",
+    "@types/mongoose": "^5.11.97",
+    "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.25",
+    "@types/winston": "^2.4.4",
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
+    "mocha": "^9.2.2",
     "nodemon": "^2.0.15",
+    "ts-mocha": "^9.0.2",
     "ts-node": "^10.7.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.3"
