--- a/Fullstack/Lektioner/2022-04-26/server/package.json
+++ b/Fullstack/Lektioner/2022-04-26/server/package.json
@@ -1,19 +1,24 @@
 {
-  "name": "2022-04-21",
+  "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.ts",
+  "main": "src/server.ts",
   "scripts": {
-    "start": "../node_modules/.bin/ts-node src/index.ts",
-    "dev": "../node_modules/.bin/nodemon --exec ts-node src/index.ts",
-    "dev:ts": "../node_modules/.bin/ts-node-dev --respawn src/index.ts",
-    "build": "ts"
+    "build": "tsc --project ./",
+    "start": "ts-node-dev src/server.ts",
+    "test": "mocha -r ts-node/register src/**/*.spec.ts"
   },
   "keywords": [],
-  "author": "",
+  "author": "Christoffer",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.3"
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
+    "express": "^4.18.0",
+    "helmet": "^5.0.2",
+    "mongoose": "^6.3.1",
+    "morgan": "^1.10.0",
+    "winston": "^3.7.2"
   },
   "devDependencies": {
     "@types/chai": "^4.3.1",
@@ -26,12 +31,11 @@
     "@types/mocha": "^9.1.1",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.3",
-    "@types/node": "^17.0.25",
+    "@types/node": "^17.0.27",
     "@types/winston": "^2.4.4",
     "chai": "^4.3.6",
     "chai-http": "^4.3.0",
     "mocha": "^9.2.2",
-    "nodemon": "^2.0.15",
     "ts-mocha": "^9.0.2",
     "ts-node": "^10.7.0",
     "ts-node-dev": "^1.1.8",
