--- a/Fullstack/Lektioner/2022-04-26/server/.env
+++ b/Fullstack/Lektioner/2022-04-26/server/.env
@@ -3,6 +3,8 @@ SERVER_URL='http://localhost'
 NODE_ENV=development
 
 MONGODB_URL='mongodb://localhost:27017/'
-MONGODB_DB_NAME='api-user-ts
+MONGODB_DB_NAME='api-user-ts'
 MONGODB_COLLECTION_USERS='user'
 MONGODB_COLLECTION_TODO='todo'
+
+MONGODB_URI='mongodb://localhost:27017/api-user-ts'
